syntax = "proto3";
package traceability.traceability;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "traceability/x/traceability/types";

// Msg defines the Msg service.
service Msg {
      rpc SendRequestShip(MsgSendRequestShip) returns (MsgSendRequestShipResponse);
  rpc SendSendDrug(MsgSendSendDrug) returns (MsgSendSendDrugResponse);
  rpc SendDestroyDrug(MsgSendDestroyDrug) returns (MsgSendDestroyDrugResponse);
  rpc SendAllowShip(MsgSendAllowShip) returns (MsgSendAllowShipResponse);
  rpc SendForbidShip(MsgSendForbidShip) returns (MsgSendForbidShipResponse);
  //rpc Traceinfobydic(MsgTraceinfobydic) returns (MsgTraceinfobydicResponse);
  rpc SendSellDrug(MsgSendSellDrug) returns (MsgSendSellDrugResponse);
  rpc SendAddCustomer(MsgSendAddCustomer) returns (MsgSendAddCustomerResponse);
  rpc SendAllowSell(MsgSendAllowSell) returns (MsgSendAllowSellResponse);
  rpc Checkdrug(MsgCheckdrug) returns (MsgCheckdrugResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSendRequestShip {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
  string drugprof = 6;
  string termofvalidity = 7;
  string pharmacy = 8;
}

message MsgSendRequestShipResponse {
}
message MsgSendSendDrug {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
}

message MsgSendSendDrugResponse {
}
message MsgSendDestroyDrug {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
}

message MsgSendDestroyDrugResponse {
}
message MsgSendAllowShip {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
}

message MsgSendAllowShipResponse {
}
message MsgSendForbidShip {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
}

message MsgSendForbidShipResponse {
}


message MsgSendSellDrug {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
}

message MsgSendSellDrugResponse {
}
message MsgSendAddCustomer {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
  string customerid = 6;
}

message MsgSendAddCustomerResponse {
}
message MsgSendAllowSell {
  string creator = 1;
  string port = 2;
  string channelID = 3;
  uint64 timeoutTimestamp = 4;
  string dic = 5;
  string drugprof = 6;
  string termofvalidity = 7;
  string pharmacy = 8;
  string manufacturer = 9;
}

message MsgSendAllowSellResponse {
}
message MsgCheckdrug {
  string creator = 1;
  string dic = 2;
}

message MsgCheckdrugResponse {
}

// this line is used by starport scaffolding # proto/tx/message
